fix(attachment): fix download button alignment

--- a/components/views/chat/message/attachments/Item/Item.less
+++ b/components/views/chat/message/attachments/Item/Item.less
@@ -22,7 +22,7 @@
     }
 
     .file-info {
-      flex-shrink: 1;
+      flex: 1;
       overflow: hidden;
       cursor: pointer;
     }
